# microboost

./: Cargo.toml  Makefile  README.md  build.rs
.github/workflows/: release.yml
src/: lib.rs  main.rs  noise_gate.rs
tests/: cable_loopback.rs  compare_new.rs  compare_recordings.rs  deep_compare.rs  passthrough_test.rs  pipeline_loopback.rs  quality_check.rs  spectral_check.rs  voice_loopback.rs
