[package]
name = "microboost"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.31"
egui = "0.31"
cpal = "0.16"
hound = "3.5"
chrono = "0.4"
rodio = { version = "0.20", default-features = false, features = ["wav"] }
windows = { version = "0.58", features = ["Win32_Media_Audio", "Win32_Media_Audio_Endpoints", "Win32_System_Com"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
chrono = "0.4"
